3.6/cloudhub/getting-started-with-connectors.adoc
= Getting Started with Connectors
:keywords: cloudhub, connectors, tutorial

This tutorial follows link:/documentation/display/current/Hello+World+on+CloudHub[Hello World] as the second installment in the CloudHub Getting Started Guide. It introduces the Twitter Connector, and describes additional CloudHub concepts. After completing this tutorial, you'll gain an understanding of how Anypoint Connectors can be leveraged for a wide array of integration solutions with CloudHub.

This tutorial should take about 45 minutes and lets you accomplish the following:

* Learn about connectors, and build a project that accesses the Twitter API using Anypoint Studio
* Learn about Mule Expression Language
* Learn about the Expression Transformer and the Logger Component
* Walk through the sign-up process for obtaining Twitter API access and credentials
* Learn more about the CloudHub Dashboard, and how to monitor and debug your project once deployed to CloudHub

== Prerequisites

This tutorial assumes that you are familiar with the concepts covered in link:/documentation/display/current/CloudHub+at+a+Glance[CloudHub at a Glance] and the link:/documentation/display/current/Hello+World+on+CloudHub[Hello World Tutorial]. Please take a moment to review them if you haven't already done so.

You  also need to enable your Twitter account for API access with write privileges. Please see link:/documentation/display/current/Configure+Twitter+for+API+Access[Configure Twitter for API Access] for instructions on doing so.

== Project Overview

With Anypoint connectors, you can leverage many Software-as-a-Service (SaaS) platforms and quickly build cloud-to-cloud integrations, cloud-to-on-site applications, and much more. This tutorial introduces you to the Twitter connector, and shows you how to configure it to access your Twitter account. The tutorial also discusses payloads and shows you how to use expressions, using Mule Expression Language, to modify and view messages at various points in the project flow.

*Key Concepts Covered in this Tutorial:*

[cols="2*", options="header"]
|===
| Concept
| Description

| *Twitter Connector*
| To demonstrate how connectors simplify API integration, this project builds on the Twitter connector to access a Twitter user stream and post status updates.

| *HTTP Connector*
| The HTTP connector (also discussed in the link:/documentation/display/current/Hello+World+on+CloudHub[Hello World tutorial]) provides a web page for sending Twitter status updates via the URL query string.

| *Expression Transformer*
| The Expression Transformer sends a response to the web page.

| *Logger*
| The Logger component updates the CloudHub console with payload data.


| *Mule Expression Language*
| Mule Expression Language is used in various components to process the payload.


| *CloudHub*
| An introduction to the CloudHub console is provided, including details on starting, stopping applications, and viewing system log messages.
|===


*Running the Project:*

After you build and deploy this project to CloudHub, you can run the project by opening a web browser and pointing it to the website produced by the HTTP connector. Then add a query string to the website URL. This query string is captured as a message in the Mule flow, using Mule Expression Language (MEL), and sent to your Twitter user stream by the Twitter connector.

As an example, if you deploy this application to the domain *twittertutorial* , the following URL sends a Tweet, "I just built a CloudHub integration using an Anypoint Connector", to your Twitter user stream:

[source]
----
http://twittertutorial.cloudhub.io/sendtweet?tweet=I just built a CloudHub integration using an Anypoint Connector
----


== Step 1: Create a New Anypoint Studio Project

To begin building this application, start Anypoint Studio and create a new project:

. Select *File* > *New* > *Mule Project*
. In the New Mule Project configuration menu, provide a name for this project: *posttweets*
. Click *Finish* .

A new project opens with a blank canvas for building the flow.

== Step 2: Configure the HTTP Connector

The first message processor in the flow is an HTTP Connector. This listener launches a web page at the URL you choose when deploying the project.

. Locate *HTTP* in the *Connectors* category of the Palette. Drag and place it on the canvas.
. Open the HTTP properties editor by clicking the icon you just placed on the canvas.
. Change the Display Name to something more meaningful, such as *Launch Website* .
. Enter *sendtweet* in the Path field.
. Create a new *Conector Configuration* element by clicking the green plus sign image:/documentation/s/en_GB/3391/c989735defd8798a9d5e69c058c254be2e5a762b.76/_/images/icons/emoticons/add.png[(plus)].

. Fill in the two required fields: *Host* and *Port*. Set the host to *All Interfaces [0.0.0.0] (Default)*  and the port to `${http.port}`.

[cols="2*", options="header"]
|===
| Field
| Value

| *Name*
| `HTTP_Listener_Configuration`

| *Host*
| *All Interfaces [0.0.0.0] (Default)*

| *Port*
| `${http.port}`

|===

[TIP]
When deploying to CloudHub, always use host *0.0.0.0* and port `${http.port`} (as discussed in the link:/documentation/display/current/Hello+World+on+CloudHub[Hello World Tutorial].) The port value lets CloudHub assign a dynamic port when deployed.

== Step 3: Configure the Twitter Connector

Before configuring the Twitter connector in Anypoint Studio, grant your Twitter account *API access*. This allows the Twitter connector to post to your user stream.

If you've never registered an application with Twitter before, read link:/documentation/display/current/Configure+Twitter+for+API+Access[Configure Twitter for API Access] for instructions. Also, be sure to enable *read and write* access as discussed in the configure document, which currently involves registering your mobile phone with Twitter. You need the read and write permissions, as the default read-only permissions do not allow the Twitter connector to post Tweets to your user stream.

After you obtain API access, copy the following credentials from your Twitter API application page to the Twitter connector configuration:

* Consumer Key
* Consumer Secret
* Access Token
* Access Token Secret

Follow these steps in Anypoint Studio to integrate the Twitter connector:

. Locate *Twitter*  in the *Connectors*  category of the Palette. Drag and place it on the canvas to the right of the HTTP Connector. If you are prompted for a Twitter version, click *Use newest*.
+
image:/documentation/download/attachments/122752458/TwitterHTTP.png?version=1&modificationDate=1422988052963[image]
+
. Click the *Twitter*  connector in your flow to open its properties editor.
. Note an error stating that `config-ref` is required, and an "x" next to the *Connector Configuration* field. Click the image:/documentation/s/en_GB/3391/c989735defd8798a9d5e69c058c254be2e5a762b.76/_/images/icons/emoticons/add.png[(plus)] icon next to this form field to create a Twitter Global Configuration.
. A * Global Element* properties menu opens. Copy in the Access Token and Access Token Secret from the Twitter website, and paste it into the *Access Key* and *Access Secret* fields. Similarly, copy the *Consumer Key* and *Consumer Secret* values from the Twitter website and paste into the appropriate form fields.
+
[NOTE]
A _Global Element_ allows to enter configuration information, such as your API credentials, once. You can then reference the Global Element many times within your flow (although for this project we only need to reference it once). Note the Global Elements tab under the Mule Studio canvas; this tab provides an alternative view for managing all Global Elements defined for this project.
. Leave *Use SSL* checked (Twitter requires a SSL connection), and click *OK* to close the Global Elements Properties menu.
  +
 image:/documentation/download/attachments/122752458/TwitterGEP.png?version=1&modificationDate=1414034304211[image]
 +
. The Twitter properties editor should still be open. Notice that the Connector Configuration field has been updated to point to the new "Twitter" Global Element.
. Select *Update Status* from the *Operation* drop-down field.
. Enter `#[message.inboundProperties['http.query.params']['tweet']]` in the *Status* field. This is a Mule expression, which is discussed later in this tutorial.
+
image:/documentation/download/attachments/122752458/twitter2.png?version=1&modificationDate=1414034304135[image]


The Twitter connector configuration is complete – click the save icon to save your configuration. The red "x" next to its icon in the flow should no longer be present.

== Step 4: Configure the Expression Transformer

After the Twitter connector sends a Tweet to your user stream, it would be a good idea to also return a response to the web page. We can do so by adding an Expression Transformer after the Twitter Connector.

. Locate the *Expression* component in the *Transformers* category of the Palette. Drag and place it on the canvas to the right of the Twitter Connector.
+
image:/documentation/download/attachments/122752458/TwitterWithExpression.png?version=1&modificationDate=1422988900518[image]
+
. Click the *Expression* Transformer to open its properties editor.
. Change the Display Name to *Return Website Response.*
. Enter `"Thanks for Tweeting! Your message: " + #[message.payload.text]` in the *Expression* field.
+
image:/documentation/download/attachments/122752458/ExpressionTwitter.png?version=2&modificationDate=1422989450598[image]



== Step 5: Add Logger Components

The Logger component is commonly used in CloudHub applications, as it can provide a detailed view of the information contained in a message at any specific point (or multiple points) in the flow. The Logger component is configured with an expression, and as the application runs, the result of this expression is sent to the CloudHub console.

In this project, we add two Logger components to the flow. In doing so, we can view the data going into the Twitter Connector, and the subsequent response payload produced by Twitter.

. Locate *Logger* in the *Components* category of the Palette. Place a Logger between the HTTP Endpoint and the Twitter Connector.
. Drag another Logger component form the Palette and place it between the Twitter Connector and the Expression Transformer. Your flow should now look like this:
+
image:/documentation/download/attachments/122752458/twitterflowlogs.png?version=2&modificationDate=1422989695217[image]
+
. Open the configuration menu for the first Logger component.
. Change the Display Name to: *Log Query String*
. Add the following expression to the Message field: +
+
`"Tweet:" + #[message.inboundProperties.'http.query.params'.tweet]`
+
image:/documentation/download/attachments/122752458/logquerystring.png?version=1&modificationDate=1414034304036[image]
+
. Open the properties editor for the second Logger component.
. Change the Display Name to * Log Payload*
. Add the following expression to the Message field: `#[payload]` +

+
image:/documentation/download/attachments/122752458/logpayload.png?version=1&modificationDate=1414034304029[image] +
+

[IMPORTANT]
In both cases, leave the Level set to * INFO* , as this  generates log entries while the application runs normally. If set to ERROR, as an example, log entries would only be generated on an error while executing the application, which is useful for debugging issues.

== Step 6: Deploy Your Application to CloudHub

Before deploying your application, it's helpful to go to the CloudHub Console first. The benefits of doing so include:

* You can watch the deployment of your application as events are displayed in the log console.
* Since your application includes Logger components, the log console  displays events as they are encountered in the flow.
* Finally, if things don't go as expected, and you become inundated with posts to your Twitter user stream, as an example, you can quickly stop the application from the CloudHub Console.

If you are using a free CloudHub account, you need to stop any other application that might be running before deploying this new application (or upgrade to a paid plan so you can run multiple applications).

=== Sign in and go to the CloudHub Console

. https://anypoint.mulesoft.com/#/signin[Sign in to the Anypoint Platform] and go to the CloudHub Console by clicking  *CloudHub* from the top menu.
. Once you are signed in, you  see a list of your uploaded applications. Note the application status indicator to the left of the application name.
+
image:/documentation/download/attachments/122752491/image2014-10-22+22%3A12%3A43.png?version=1&modificationDate=1414041811385[image]


=== Deploy Your Application

Now go back to Anypoint Studio to deploy your application.

. Save your project by choosing *File* > *Save*.
. Locate the project name in the Package Explorer view, right-click and choose *CloudHub* > *Deploy to CloudHub*.
. Enter your credentials in the menu that opens, and choose a unique domain where you can access the deployed application.
. Select a domain and a runtime, then click *Finish* .

=== Watch the CloudHub Logs

It can take several minutes for your application to upload and deploy. This process can be monitored through the CloudHub dashboard. Since your application includes Logger components, the CloudHub console  also shows you the log entries these components generate.

. Go back to the CloudHub Console.
. Click  *Dashboard*, you should see your new application listed.
. Click  the application name, and then click on * Logs* .
. Various status messages display as your application deploys.
. After deployment  completes, a system message displays that the application was started. +
+
image:/documentation/download/attachments/122752458/image2014-10-24+11%3A28%3A5.png?version=1&modificationDate=1414175285352[image]



== Step 7: Run the Project

You are now ready to run the project! First, you need to determine the URL where it is running, and then add your Tweet as a query parameter to the URL.

As an example, if you deployed your application to _twittertutorial_ and you would like to Tweet "I built a new CloudHub application", the URL would be:

[source]
----
http://twittertutorial.cloudhub.io/sendtweet?tweet=I built a new CloudHub application
----

Note that for some browsers, you may need to replace spaces in the URL with "%20". In this case, enter the URL as follows:

[source]
----
http://twittertesttest.cloudhub.io/sendtweet?tweet=I%20built%20a%20new%20Mule%20CloudHub%20application
----

How did we arrive at this URL? Much of it is configured while building the project:

* The sub-domain, *twittertesttest*  (as an example), was entered as the "domain" when deploying the project from Anypoint Studio. This was an option you entered in the Deploy to CloudHub dialog when you deployed your application. Note that it must be unique across all CloudHub deployments.
* `/sendtweet` was defined as the *Path* in the HTTP connector.
* We configured the Twitter Connector with an expression: `#[message.inboundProperties.'http.query.params'.tweet]`. This expression passes the value of a query parameter ("tweet") in the URL string to your Twitter user stream.

Now log into your Twitter account, you should see your new Tweet posted. If you try this again, be sure to change the Tweet contents, as Twitter bounces duplicate posts. The web page should also show a response: *Thanks for Tweeting!*

The CloudHub console  also shows various results from the logger components. These are discussed in the next section.

== How the Project Works

In this section, we take an inside look at messages within the flow, and see how expressions allow us to control which data is sent to Twitter. We also revisit with the Logger component and view the output they produce in the CloudHub console.

=== About the Payload

The flow we built in Anypoint Studio contains message processors, including the HTTP connector, Twitter Connector and Expression Transformer, and it is “Mule messages” that carry data between these message processors.

A Mule message contains the following components:

* Payload – The actual data that we are concerned with in this application
* Properties — Along with a set of standard parameters, user defined parameters may be included as well. We access an “inbound property” in this application to view the URL query parameter.
* Attachments — Although not used in this project, other applications may include attachments such as an XML file or PDF attachment.

=== About Mule Expression Language

Messages within the Mule flow can be quite complex, and it is often necessary to perform some operation on them, or extract pertinent information. In this project, we needed to extract a URL query parameter from the properties component of the message, and send it to the Twitter user stream. We used Mule Expression Language to do so.

CloudHub supports many expression languages, including Groovy, xpath, regex and more. However, the syntax of these languages vary from one to another, and to allow for a common and easy-to-use syntax specifically for operating on Mule messages, Mule Expression Language was recently introduced.

Mule Expression Language provides a powerful and comprehensive set of features. In this project, we used expressions at several points in the flow:

* The Twitter Connector used the following Mule expression to pass the URL query parameter, "tweet" to the Twitter user stream:
+
 `#[message.inboundProperties.'http.query.params'.tweet]`
+
* The Expression Transformer used the following Mule expression to extract the returned text, or Tweet, from the payload produced by Twitter:
+
 `"Thanks for Tweeting! Your message: " + #[message.payload.text]`
+
* The logger component extracted the payload generated by Twitter:
+
 `#[payload]`

=== View Logs in the CloudHub console

Now with an understanding of Mule messages and expressions, let's take a look at the log entries produced by the Logger components. First, produce a new Tweet by visiting a URL such as this (be sure to change "twittertutorial" to your unique sub-domain):

[source]
----
http://twittertutorial.cloudhub.io/sendtweet?tweet=Sent from my CloudHub application
----

Now log into the CloudHub console, select this application, and go to the "logs" tab (as detailed above). After you visited the URL above, you should see a new set of log entries.

The first log entry was produced by the expression we configured in the Logger component:

[source]
----
Tweet: #[message.inboundProperties.'http.query.params'.tweet]
----

It produces this result in the CloudHub console:

[source]
----
Tweet: Sent from my CloudHub application
----

Note that we added the text "Tweet" to precede the results of the Mule expression; this is so that we could more easily identify this message in the log console.

For the second Logger component, we used this expression: `#[payload]`

This produced a much longer log result in the CloudHub console:

[source]
----
StatusJSONImpl{createdAt=Mon Jun 04 23:03:00 UTC 2012, id=209782335479174657,
text='Sent from my CloudHub application', source='CloudHub integration', isTruncated=false,
inReplyToStatusId=-1, inReplyToUserId=-1, isFavorited=false, inReplyToScreenName='null',
geoLocation=null, place=null, retweetCount=0, wasRetweetedByMe=false, contributors=null,
annotations=null, retweetedStatus=null, userMentionEntities=null, urlEntities=null, hashtagEntities=null, user=UserJSONImpl{id=563265508, name='MuleIONtest',
screenName='MuleCloudHubtest384', location='null', description='null', isContributorsEnabled=false,
...
----

This second Logger component shows us that the Twitter Connector produced a payload that is the API response from Twitter. This response includes the string we Tweeted, as well as the user name and other data about the user account associated with the user stream we accessed.

Instead of logging the complete payload, you could log just the tweet by using the expression: `#[payload.text]`. You could also log a more complex expression, such as the user screen name which is further nested in the payload: `#[payload.user.ScreenName]`

== Next Steps

* Want to try another tutorial involving Anypoint Connectors? Try the link:/documentation/display/current/Anypoint+Connector+Tutorial[Anypoint Connector Tutorial].
* Interested in learning more about the Mule message? Try the link:/documentation/display/current/Mule+Message+Tutorial[Mule Message Tutorial].
* Learn more about link:/documentation/display/current/Managing+CloudHub+Applications[managing your applications on CloudHub].

For further information about connectors, see these reference documents:

* link:/documentation/display/current/Anypoint+Connectors[Anypoint Connectors]
* http://mulesoft.github.com/twitter-connector/mule/twitter.html[Twitter Connector Reference]
